Enhance BaseObjectClass with dunder methods support: Introduced default implementations for various dunder methods, including arithmetic, comparison, unary, and item access methods. This allows user-defined classes to customize behavior and improves integration with built-in language features.